add package .jar